Fixed word-wrap and size for project link column

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -37,7 +37,7 @@ h5 {
 }
 
 .c-usermessage p {
-  word-break: break-all;
+  word-break: break-word;
   white-space: normal;
   margin: 0;
 }
